--- a/react.basic/01-hello_react.html
+++ b/react.basic/01-hello_react.html
@@ -19,7 +19,7 @@
   <div id="test"></div>
   <script type="text/babel"> /* type类型为babel*/
 // 1.创建一个虚拟DOM
-  let VDOM= <h1>hello,react</h1>
+  let VDOM= <h1>hello,react！</h1>
 //2.让react将虚拟DOM-VDOM转为真实DOM，插入页面
   ReactDOM.render(VDOM,document.getElementById('test'))
 </script>
